refactor: Participants의 from 메서드 수정 - toList()로 반환하여 불변 객체로 보호